# picgen-mcp

./: .env.example  .gitignore  .npmignore  CHANGELOG.md  INSTALL.md  LICENSE  NPM_PUBLISH.md  QUICK_START.md  README.md  openai_image_generator_api.py  package.json  pyproject.toml  test_local.py
.serena/: project.yml
.serena/memories/: code_style.md  project_overview.md  suggested_commands.md  task_completion.md
src/imagegen_mcp/: __init__.py  server.py
tests/: __init__.py  test_server.py
